# cairn

./: .editorconfig  .gitignore  .tool-versions  404.html  CLAUDE.md  SECURITY.md  extracted-plan.txt  federated-platform-plan.docx  index.html  print.html  searcher-c2a407aa.js  searchindex-a6cdf25a.js  toc-58fd86ec.js  toc.html
.github/workflows/: ci.yml  docs.yml  release-desktop.yml  release-mobile.yml  release-server.yml
client/desktop/: Cargo.toml  README.md  tauri.conf.json
client/desktop/capabilities/: default.json
client/desktop/icons/: icon.icns
client/desktop/src/: keychain.rs  lib.rs  main.rs  notifications.rs  shortcuts.rs  tray.rs  updater.rs
client/mobile/: README.md  app.json  eas.json  metro.config.js  package-lock.json  package.json  tsconfig.json
client/web/: package-lock.json  package.json  vite.config.ts
clients/: desktop.html  mobile.html  web.html
deploy/: .env.example  cairn-ctl  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.staging.yml  init-staging-dbs.sql  install.sh
deploy/ansible/: backup.yml  deploy.yml  inventory.example.ini  setup.yml  update.yml
deploy/grafana/: cairn-overview.json  (+1 more)
docs/: ADMINISTRATION.md  CLIENT.md  DESIGN.md  FAQ.md  SERVER.md  book.toml  protocol-spec.md
proto/: package-lock.json  package.json  tsconfig.cjs.json  tsconfig.esm.json  tsconfig.json  vitest.config.ts
proto/mls-wasm/: Cargo.toml
proto/mls-wasm/src/: error.rs  lib.rs  session.rs
scripts/: release.sh
self-hosting/: administration.html  advanced.html  configuration.html  federation.html  quickstart.html  reverse-proxy.html
server/: .dialyzer_ignore.exs  .gitignore  .sobelow-conf  Dockerfile  README.md  mix.exs
sfu/: Dockerfile  package-lock.json  package.json  tsconfig.json
(+682 files in other folders)
