[package]
name = "mls-wasm"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
openmls = { version = "0.8.0", features = ["js"] }
openmls_rust_crypto = "0.5.0"
openmls_traits = "0.5.0"
openmls_basic_credential = "0.5.0"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
getrandom = { version = "0.3", features = ["wasm_js"] }
getrandom_0_2 = { package = "getrandom", version = "0.2", features = ["js"] }
tls_codec = { version = "0.4", features = ["derive"] }

[profile.release]
opt-level = "s"
lto = true
